forms and inline

--- a/images,list and tables .html
+++ b/images,list and tables .html
@@ -52,7 +52,7 @@
     <li>text </li>
 </ul>
 <ol type="i">
-    <!-- in this we have used i as marking thme  -->
+    <!-- in this we have used i as marking thee  -->
     <li>text </li>
     <li>text </li>
     <li>text </li>
