--- a/HTML/HTML for CSS/markup for css.html
+++ b/HTML/HTML for CSS/markup for css.html
@@ -17,7 +17,7 @@
 
     /* child selector */
   div > article{
-    /* so this above div > article means that if the article is inside of the div the following properties would apply */
+    /* so the  "div > article" means that if the article is inside of the div the following properties would apply */
     background-color: blueviolet;
     color: chartreuse;
 }
