--- a/HTML/HTML for CSS/display.html
+++ b/HTML/HTML for CSS/display.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="stylesheet" href="/CSS/display.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/CSS/display.css" />
+  </head>
+  <body>
     <h1>hey how you doin for h1</h1>
-<p>paragraph for  paragraph in <html></html></p>
-</body>
-
+    <p>
+      paragraph for paragraph in
+      <html></html>
+    </p>
+  </body>
 </html>
